--- a/ios/hendra_mobile_testing/Info.plist
+++ b/ios/hendra_mobile_testing/Info.plist
@@ -54,8 +54,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Cool !! This weather App need location </string>
+	<key>NSLocationUsageDescription</key>
+	<string>Cool !! This weather App need location Permission</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Cool !! This weather App need location Permission needed</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Cool !! This weather App need location Permission needs</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
