--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.4",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.1.0",
@@ -34,6 +35,7 @@
     "react-redux": "^8.0.5",
     "recoil": "^0.7.6",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
